# gt-annotate2

./: .gitmodules  CMakeLists.txt  README.md  config.json
include/: colorpicker.hpp  graphicspixmapitem.hpp  graphicsrectitem.hpp  graphicsscene.hpp  graphicsview.hpp  labeldialog.hpp  mainwindow.hpp  painter.hpp  paintersettings.hpp  pensizepicker.hpp  toolbar.hpp  view.hpp
src/: colorpicker.cpp  graphicspixmapitem.cpp  graphicsrectitem.cpp  graphicsscene.cpp  graphicsview.cpp  labeldialog.cpp  main.cpp  mainwindow.cpp  painter.cpp  paintersettings.cpp  pensizepicker.cpp  toolbar.cpp  view.cpp
